<resources>
    <string name="app_name">Live Match CAM</string>
    <string name="app_name_prefix">Live Match</string>
    <string name="app_name_suffix">CAM</string>
    <string name="version">Version: %1$s</string>
    <string name="old_api">Old API (16 – 20)</string>
    <string name="from_file">From file</string>
    <string name="display">Screen</string>
    <string name="live_stream">Choose Stream Key</string>
    <string name="tv_select">Select your streamer</string>
    <string name="hint_match_league">Serie C - Girone A</string>
    <string name="hint_home_team">AAA</string>
    <string name="hint_title">ddddd - dd mmmm yyyy - Ore: hh:mm</string>
    <string name="hint_match_date">dd mmmm yyyy - hh:mm</string>
    <string name="hint_away_team">BBB</string>
    <string name="hint_protocol">rtmp://yourendpoint/…</string>
    <string name="hint_live">https://youtube.com/live/xxxxxxxxxxx</string>
    <string name="hint_key">xxxx-xxxx-xxxx-xxxx-xxxx</string>
    <string name="hint_sport">Sport</string>
    <string name="left_degree">Left zoom at</string>
    <string name="right_degree">Right zoom at</string>
    <string name="hint_degree">0°</string>
    <string name="zoom_level">Zoom Level</string>
    <string name="zoom_offset">Zoom offset</string>
    <string name="auto_zoom">auto zoom</string>
    <string name="streaming_url">Streaming URL</string>
    <string name="live_url">Live URL</string>
    <string name="rtmp_server">RTMP</string>
    <string name="firebase_match">Stream</string>
    <string name="schedule_match">Schedule Match</string>
    <string name="no_schedule_match">No Schedules Match Available</string>
    <string name="update_match_succeeded">Match data updated</string>
    <string name="server">Server</string>
    <string name="firebase_custom">Firebase</string>
    <string name="broadcasts">Add or Update Match</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="streamer">Streamer</string>
    <string name="account">Account</string>
    <string name="no_configured_account">No valid account</string>
    <string name="account_key">Account Key</string>
    <string name="match">Teams Configuration</string>
    <string name="_config_auto_zoom">Auto Zoom</string>
    <string name="sport">Sport</string>
    <string name="match_info">Match info</string>
    <string name="stream_key">Stream Key</string>
    <string name="err_message">ERR</string>
    <string name="zoom_strategy">Zoom Strategy</string>
    <string name="offset_strategy">Offset Strategy</string>
    <string name="video_resolution">Video Resolution</string>
    <string name="date_time">Select Scheduled Date and Time</string>
    <string name="start_period_time">Update Match Time</string>
    <string name="video_fps">fps</string>
    <string name="video_bitrate">Bitrate</string>
    <string name="choose_color">Choose shirt color</string>
    <string name="choose_logo">Insert or choose logo URL</string>
    <string name="choose_overlay">Insert or choose overlay URL</string>
    <string name="overlay_url_placeholder">http://&#8230;</string>
    <string name="handle_streamers">Streamers</string>
    <string name="add_remove">Add/Remove</string>
    <string name="stream">Stream</string>
    <string name="go_live">Go Live</string>
    <string name="remote_score">Remote Score</string>
    <string name="add">Add</string>
    <string name="new_schedule">Schedule a match</string>
    <string name="select_thumbnail">Select a Thumbnail and a Live Stream</string>
    <string name="notification_text">Streaming service is running</string>
    <string name="performance_header">Performance \u0026 UI Toggles</string>
    <string name="enable_replay_key" translatable="false">enable_replay</string>
    <string name="enable_replay_title">Enable Live Replay</string>
    <string name="enable_replay_summary_on">Recording background chunks and showing UI</string>
    <string name="enable_replay_summary_off">Replay disabled to save CPU and Disk I/O</string>
    <string name="enable_filters_key" translatable="false">enable_filters</string>
    <string name="enable_filters_title">Enable Extra Filters</string>
    <string name="enable_filters_summary_on">Allows rendering image/video/text overlays</string>
    <string name="enable_filters_summary_off">Extra filters disabled to save GPU</string>
    <string name="enable_scoreboard_key" translatable="false">enable_scoreboard</string>
    <string name="enable_scoreboard_title">Enable Scoreboard</string>
    <string name="enable_scoreboard_summary_on">Rendering the live animated scoreboard</string>
    <string name="enable_scoreboard_summary_off">Scoreboard disabled to save CPU/GPU</string>
    <string name="keyframe_interval_key" translatable="false">keyframe_interval</string>
    <string name="keyframe_interval_title">Keyframe Interval</string>
    <string name="keyframe_interval_summary">Seconds between keyframes. Lower = better compatibility, higher = slightly sharper image</string>
    <string-array name="keyframe_interval_entries">
        <item>1 Second (recommended)</item>
        <item>2 Seconds</item>
    </string-array>
    <string-array name="keyframe_interval_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="safe_mode_threshold_key" translatable="false">safe_mode_threshold</string>
    <string name="safe_mode_threshold_title">Auto Safe Mode</string>
    <string name="safe_mode_threshold_summary">Seconds of critical connection before triggering Safe Mode</string>
    <string-array name="safe_mode_threshold_entries">
        <item>Manual Only (0s)</item>
        <item>5 Seconds</item>
        <item>10 Seconds (Recommended)</item>
        <item>15 Seconds</item>
    </string-array>
    <string-array name="safe_mode_threshold_values">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>
    <string name="match_league">Match Description</string>
    <string name="team_name">Team Name</string>
    <string name="home_team">Team 1</string>
    <string name="away_team">Team 2</string>
    <string name="streamin_time">00:00:00</string>
    <string name="sport_soccer">Soccer</string>
    <string name="sport_basket">Basket</string>
    <string name="sport_volley">Volley</string>
    <string name="grey_scale">Grey scale</string>
    <string name="negative">Negative</string>
    <string name="noise">Noise</string>
    <string name="sepia">Sepia</string>
    <string name="no_filter">No filter</string>
    <string name="analog_tv">Analog TV</string>
    <string name="android_view">Android view</string>
    <string name="basic_deformation">Basic deformation</string>
    <string name="beauty">Beauty</string>
    <string name="black">Black</string>
    <string name="blur">Blur</string>
    <string name="brightness">Brightness</string>
    <string name="cartoon">Cartoon</string>
    <string name="chroma">Chroma</string>
    <string name="circle">Circle</string>
    <string name="color">Color</string>
    <string name="contrast">Contrast</string>
    <string name="crop">Crop</string>
    <string name="duotone">Duotone</string>
    <string name="earlybird">EarlyBird</string>
    <string name="edge_detection">Edge detection</string>
    <string name="exposure">Exposure</string>
    <string name="fire">Fire</string>
    <string name="gamma">Gamma</string>
    <string name="glitch">Glitch</string>
    <string name="gif">Gif</string>
    <string name="halftone_lines">Halftone lines</string>
    <string name="image">Image</string>
    <string name="image_70s">Image 70s</string>
    <string name="lamoish">Lamoish</string>
    <string name="money">Money</string>
    <string name="pixelated">Pixelated</string>
    <string name="polygonization">Polygonization</string>
    <string name="rgb_saturate">RGB saturate</string>
    <string name="ripple">Ripple</string>
    <string name="rotation">Rotation</string>
    <string name="saturation">Saturation</string>
    <string name="surface_filter">Surface filter</string>
    <string name="rainbow">Rainbow</string>
    <string name="sharpness">Sharpness</string>
    <string name="snow">Snow</string>
    <string name="swirl">Swirl</string>
    <string name="temperature">Temperature</string>
    <string name="text">Text</string>
    <string name="zebra">Zebra</string>
    <string name="filters">Filters</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="audio_source">Audio source</string>
    <string name="microphone">Microphone</string>
    <string name="internal">Internal Audio</string>
    <string name="mix">Mix audio</string>
    <string name="video_source">Camera source</string>
    <string name="camera_uvc">CameraUVC</string>
    <string name="bitmap">Bitmap</string>
    <string name="youtube_account_placeholder">youtube account</string>
    <string name="description_placeholder">&#8230;</string>
    <string name="live_name_placeholder">xxxxxxxxxxxxx</string>
    <string name="live_id_placeholder">xxxxxxxxxxxxx</string>
    <string name="server_placeholder">rtmp://&#8230;</string>
    <string name="title_placeholder">Title</string>
    <string name="date_placeholder">01/01/2025 10:00</string>
    <string name="time_placeholder">00:00</string>
    <string name="score_placeholder">0</string>
    <string name="account_key_placeholder">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="notifications_header">Camera Preferences</string>
    <string name="camera_status_notifications_key" translatable="false">camera_status_notifications</string>
    <string name="camera_status_notifications_title">Status notifications</string>
    <string name="camera_status_notifications_on">Show toast notifications on camera status</string>
    <string name="camera_status_notifications_off">Hide toast notifications on camera status</string>
    <string name="camera_video_stabilization_key" translatable="false">video_stabilization</string>
    <string name="camera_video_stabilization_title">Video Stabilization</string>
    <string name="camera_video_stabilization_on">Enabled</string>
    <string name="camera_video_stabilization_off">Disabled</string>
    <string name="camera_optical_video_stabilization_key" translatable="false">optical_video_stabilization</string>
    <string name="camera_optical_video_stabilization_title">Optical Video Stabilization</string>
    <string name="camera_optical_video_stabilization_on">Enabled</string>
    <string name="camera_optical_video_stabilization_off">Disabled</string>
    <string name="camera_lock_af_key" translatable="false">lock_auto_focus</string>
    <string name="camera_lock_af_title">Lock Autofocus</string>
    <string name="camera_lock_af_on">Autofocus continuous will be auto disabled on start streaming</string>
    <string name="camera_lock_af_off">No action on autofocus continuous on start streaming</string>
    <string name="replay_header">Replay</string>
    <string name="replay_duration_key" translatable="false">replay_duration</string>
    <string name="replay_duration_title">Replay Buffer Duration</string>
    <string name="replay_duration_summary">Duration of the rolling video buffer for replays</string>
    <string name="replay_quick_duration_key" translatable="false">replay_quick_duration</string>
    <string name="replay_quick_duration_title">Quick Replay Duration</string>
    <string name="replay_quick_duration_summary">Duration to go back when doing a Quick Replay</string>
    <string name="replay_speed_key" translatable="false">replay_speed</string>
    <string name="replay_speed_title">Default Replay Speed</string>
    <string name="replay_speed_summary">Default playback speed for video replays</string>
    <string name="youtube">YouTube</string>
    <string name="youtube_stream">Next Matches</string>
</resources>