<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:icon="@drawable/ic_notifications"
        app:title="@string/notifications_header">

        <SwitchPreferenceCompat
            app:key="@string/camera_status_notifications_key"
            app:title="@string/camera_status_notifications_title"
            app:summaryOn="@string/camera_status_notifications_on"
            app:summaryOff="@string/camera_status_notifications_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_device_camera"
        app:title="@string/notifications_header">

        <SwitchPreferenceCompat
            app:key="@string/camera_lock_af_key"
            app:title="@string/camera_lock_af_title"
            app:summaryOn="@string/camera_lock_af_on"
            app:summaryOff="@string/camera_lock_af_off" />

        <SwitchPreferenceCompat
            app:key="@string/camera_video_stabilization_key"
            app:title="@string/camera_video_stabilization_title"
            app:summaryOn="@string/camera_video_stabilization_on"
            app:summaryOff="@string/camera_video_stabilization_off" />

        <SwitchPreferenceCompat
            app:key="@string/camera_optical_video_stabilization_key"
            app:title="@string/camera_optical_video_stabilization_title"
            app:summaryOn="@string/camera_optical_video_stabilization_on"
            app:summaryOff="@string/camera_optical_video_stabilization_off" />
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_replay"
        app:title="@string/replay_header">

        <ListPreference
            app:key="@string/replay_duration_key"
            app:title="@string/replay_duration_title"
            app:summary="@string/replay_duration_summary"
            app:entries="@array/replay_duration_entries"
            app:entryValues="@array/replay_duration_values"
            app:defaultValue="30"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="@string/replay_quick_duration_key"
            app:title="@string/replay_quick_duration_title"
            app:summary="@string/replay_quick_duration_summary"
            app:entries="@array/replay_duration_entries"
            app:entryValues="@array/replay_duration_values"
            app:defaultValue="20"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="@string/replay_speed_key"
            app:title="@string/replay_speed_title"
            app:summary="@string/replay_speed_summary"
            app:entries="@array/replay_speed_entries"
            app:entryValues="@array/replay_speed_values"
            app:defaultValue="0.5"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_settings"
        app:title="@string/performance_header">

        <SwitchPreferenceCompat
            app:key="@string/enable_replay_key"
            app:title="@string/enable_replay_title"
            app:summaryOn="@string/enable_replay_summary_on"
            app:summaryOff="@string/enable_replay_summary_off"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="@string/enable_filters_key"
            app:title="@string/enable_filters_title"
            app:summaryOn="@string/enable_filters_summary_on"
            app:summaryOff="@string/enable_filters_summary_off"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="@string/enable_scoreboard_key"
            app:title="@string/enable_scoreboard_title"
            app:summaryOn="@string/enable_scoreboard_summary_on"
            app:summaryOff="@string/enable_scoreboard_summary_off"
            app:defaultValue="true" />

        <ListPreference
            app:key="@string/keyframe_interval_key"
            app:title="@string/keyframe_interval_title"
            app:summary="@string/keyframe_interval_summary"
            app:entries="@array/keyframe_interval_entries"
            app:entryValues="@array/keyframe_interval_values"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->
<!--    -->
<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>