<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/serverConfigurationFragment">

    <fragment
        android:id="@+id/serverConfigurationFragment"
        android:name="it.lmqv.livematchcam.fragments.server.ServerConfigurationFragment"
        android:label="@string/server">
        <argument
            android:name="syncStrategy"
            app:argType="it.lmqv.livematchcam.utils.SyncStrategy"
            android:defaultValue="LOCAL" />
    </fragment>

    <fragment
        android:id="@+id/firebaseConfigurationFragment"
        android:name="it.lmqv.livematchcam.fragments.firebase.FirebaseConfigurationFragment"
        android:label="@string/firebase_custom">
        <argument
            android:name="syncStrategy"
            app:argType="it.lmqv.livematchcam.utils.SyncStrategy"
            android:defaultValue="FIREBASE" />
    </fragment>

    <fragment
        android:id="@+id/youtubeConfigurationFragment"
        android:name="it.lmqv.livematchcam.fragments.youtube.YoutubeConfigurationFragment"
        android:label="@string/youtube">
        <argument
            android:name="syncStrategy"
            app:argType="it.lmqv.livematchcam.utils.SyncStrategy"
            android:defaultValue="FIREBASE" />
    </fragment>

    <fragment
        android:id="@+id/youtubeStreamFragment"
        android:name="it.lmqv.livematchcam.fragments.youtube.YoutubeStreamFragment"
        android:label="@string/youtube_stream">
        <argument
            android:name="syncStrategy"
            app:argType="it.lmqv.livematchcam.utils.SyncStrategy"
            android:defaultValue="FIREBASE" />
    </fragment>
</navigation>