<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alpha_background"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/firebase_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/description_placeholder"
        android:src="@drawable/ic_link" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streamer"
        android:textColor="@color/appColorSecondary" />

    <TextView
        android:id="@+id/account_name"
        style="@style/EditTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:drawablePadding="5dp"
        app:drawableStartCompat="@drawable/user_account" />

    <LinearLayout
        android:id="@+id/authorized_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_key"
            android:textColor="@color/appColorSecondary" />

        <TextView
            android:id="@+id/account_key"
            style="@style/EditTextViewStyle"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/cloud_cross"
            android:drawablePadding="5dp"
            android:hint="@string/account_key_placeholder" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/handle_streamers"
                android:textColor="@color/appColorSecondary" />

            <Button
                android:enabled="false"
                android:id="@+id/activity_addremove"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/score_board_secondary_background"
                android:paddingHorizontal="40dp"
                android:paddingVertical="5dp"
                android:textColor="@color/text_color_selector"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
