<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="4dp">

    <ImageView
        android:id="@+id/stream_item_image"
        android:layout_width="@dimen/image_size_default"
        android:layout_height="@dimen/image_size_default"
        android:layout_gravity="center_vertical"
        android:scaleType="fitCenter"
        android:contentDescription="@string/description_placeholder"
        android:src="@drawable/preview_missing"
        android:layout_marginEnd="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stream_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/secondary_dark" />

        <TextView
            android:id="@+id/stream_item_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/server_placeholder"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_server" />

        <TextView
            android:id="@+id/stream_item_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/hint_key"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_key"/>

        <!--TextView
            android:id="@+id/spinner_item_broadcast_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_key"
            android:textSize="10sp"
            android:textColor="@color/black" /-->
    </LinearLayout>
</LinearLayout>
