<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="4dp">

    <ImageView
        android:id="@+id/spinner_item_image"
        android:layout_width="@dimen/image_size_width_large"
        android:layout_height="@dimen/image_size_height"
        android:contentDescription="@string/description_placeholder"
        android:src="@drawable/preview_missing"
        android:layout_marginEnd="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/spinner_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:textColor="@color/secondary_dark" />
        <TextView
            android:id="@+id/spinner_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textColor="@color/black" />

        <!--TextView
            android:id="@+id/spinner_item_broadcast_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_key"
            android:textColor="@color/black" /-->
    </LinearLayout>
</LinearLayout>
