<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/spinner_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/description_placeholder"
            android:src="@drawable/ic_key"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/spinner_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/live_name_placeholder"
                android:textSize="16sp"
                android:textColor="@color/secondary_dark" />

            <TextView
                android:visibility="gone"
                android:id="@+id/spinner_item_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/live_id_placeholder"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginTop="2dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/spinner_item_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_placeholder"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/spinner_item_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/hint_key"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_item_server" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>
