<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minWidth="200dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/description_placeholder"
            android:textColor="@color/BLACK"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:id="@+id/home_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="end"
                android:paddingEnd="3dp"
                android:text="@string/hint_home_team"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/score_board_white_squared_background"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/home_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/score_placeholder"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/score_placeholder"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/away_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="start"
                android:paddingStart="3dp"
                android:text="@string/hint_away_team"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/match_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/time_placeholder"
            android:textAlignment="center" />
    </LinearLayout>
</FrameLayout>